// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/PostAttachmentOpenGraph Match snapshot for large image openGraphData 1`] = `
<div
  className="attachment attachment--opengraph"
>
  <div
    className="attachment__content"
  >
    <div
      className="clearfix attachment__container attachment__container--opengraph"
    >
      <div
        className="attachment__body__wrap attachment__body__wrap--opengraph"
      >
        <span
          className="sitename"
        >
          Mattermost
        </span>
        <h1
          className="attachment__title attachment__title--opengraph"
        >
          <a
            className="attachment__title-link attachment__title-link--opengraph"
            href="http://mattermost.com"
            rel="noopener noreferrer"
            target="_blank"
            title="Mattermost Private Cloud Messaging"
          >
            Mattermost Private Cloud Messaging
          </a>
        </h1>
        <div
          className="attachment__body attachment__body--opengraph"
        >
          <div>
            <div>
              description
               
            </div>
          </div>
        </div>
      </div>
      <div
        className="attachment__image__container--opengraph"
      >
        <SizeAwareImage
          className="attachment__image attachment__image--opengraph"
          dimensions={null}
          onImageLoaded={[Function]}
          src="/api/v4/image?url=http%3A%2F%2Fmattermost.com%2FOpenGraphImage.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachmentOpenGraph Match snapshot for small image openGraphData 1`] = `
<div
  className="attachment attachment--opengraph"
>
  <div
    className="attachment__content"
  >
    <div
      className="clearfix attachment__container attachment__container--opengraph"
    >
      <div
        className="attachment__body__wrap attachment__body__wrap--opengraph"
      >
        <span
          className="sitename"
        >
          Mattermost
        </span>
        <h1
          className="attachment__title attachment__title--opengraph"
        >
          <a
            className="attachment__title-link attachment__title-link--opengraph"
            href="http://mattermost.com"
            rel="noopener noreferrer"
            target="_blank"
            title="Mattermost Private Cloud Messaging"
          >
            Mattermost Private Cloud Messaging
          </a>
        </h1>
        <div
          className="attachment__body attachment__body--opengraph"
        >
          <div>
            <div>
              description
               
            </div>
          </div>
        </div>
      </div>
      <div
        className="attachment__image__container--opengraph"
      >
        <SizeAwareImage
          className="attachment__image attachment__image--opengraph"
          dimensions={null}
          onImageLoaded={[Function]}
          src="/api/v4/image?url=http%3A%2F%2Fmattermost.com%2FOpenGraphImage.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/post_view/PostAttachmentOpenGraph Match snapshot for with remove preview 1`] = `
<div
  className="attachment attachment--opengraph"
>
  <div
    className="attachment__content"
  >
    <div
      className="clearfix attachment__container attachment__container--opengraph"
    >
      <div
        className="attachment__body__wrap attachment__body__wrap--opengraph"
      >
        <span
          className="sitename"
        >
          Mattermost
        </span>
        <button
          aria-label="Close"
          className="btn-close"
          id="removePreviewButton"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h1
          className="attachment__title attachment__title--opengraph"
        >
          <a
            className="attachment__title-link attachment__title-link--opengraph"
            href="http://mattermost.com"
            rel="noopener noreferrer"
            target="_blank"
            title="Mattermost Private Cloud Messaging"
          >
            Mattermost Private Cloud Messaging
          </a>
        </h1>
        <div
          className="attachment__body attachment__body--opengraph"
        >
          <div>
            <div>
              description
               
            </div>
          </div>
        </div>
      </div>
      <div
        className="attachment__image__container--opengraph"
      >
        <SizeAwareImage
          className="attachment__image attachment__image--opengraph"
          dimensions={null}
          onImageLoaded={[Function]}
          src="/api/v4/image?url=http%3A%2F%2Fmattermost.com%2FOpenGraphImage.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;
